--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-router": "^7.4.0",
+    "mavon-editor": "^2.7.7",
     "nuxt": "^2.0.0",
     "nuxt-coffeescript-module": "^2.1.0"
   },
