--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
+    "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
     "koa-json": "^2.0.2",
     "koa-router": "^7.4.0",
     "mavon-editor": "^2.7.7",
     "nuxt": "^2.0.0",
-    "nuxt-coffeescript-module": "^2.1.0"
+    "nuxt-coffeescript-module": "^2.1.0",
+    "qiniu": "^7.2.2",
+    "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
     "coffee-loader": "^0.9.0",
